some warnings cleaned up