@@ -298,9 +298,9 @@ public class CocoaUIEnhancer {
 	private static Object wrapPointer(final long value) {
 		final Class<?> PTR_CLASS = C.PTR_SIZEOF == 8 ? long.class : int.class;
 		if (PTR_CLASS == long.class) {
-			return new Long(value);
+			return Long.valueOf(value);
 		}
-		return new Integer((int) value);
+		return Integer.valueOf((int) value);
 	}
 
 	private static Object invoke(final Class<?> clazz, final String methodName,
